--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    background-color: #e0e8ff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+main{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    width: 90vw;
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 50px;
+    padding-bottom: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1{
+    background-color:#1b1096;
+    color:#fff;
+    width: 100%;
+    margin-bottom: 10px;
+    font-size: 2rem;
+    padding:20px 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.output{
+    padding:10px 5px;
+    background-color:#1b1096 ;
+    border-radius: 99px;
+    margin-top: 10px;
+    color: #fff;
+    margin: 5px auto;
+    width: 12%;
+    
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-section{
+    width: 70%;
+    margin: 0 auto;
+}
+.input-slider{
+    width:100%;
+    margin-top: 5px;
+}
+.output-section{
+    margin-top: 20px;
 }
